--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/melodic/snowbot_operating_system
-	previous = 
-	base = dffcac7
+	previous = dffcac7
+	base = b603b7a
 	trim = 
 	trimbase = 
