--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/melodic/snowbot_operating_system
-	previous = 
-	base = ab978f5
+	previous = ab978f5
+	base = eb9b866
 	trim = 
 	trimbase = 
