--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/snowbot_operating_system
-	previous = 
-	base = 77341ad
+	previous = 77341ad
+	base = c0688b1
 	trim = 
 	trimbase = 
