--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/snowbot_operating_system
-	previous = 
-	base = 6b9a3ab
+	previous = 6b9a3ab
+	base = dcde8f5
 	trim = 
 	trimbase = 
