--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/snowbot_operating_system
-	previous = 
-	base = 541ffc6
+	previous = 541ffc6
+	base = 7c1d160
 	trim = 
 	trimbase = 
