--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/snowbot_operating_system
-	previous = 
-	base = 41f92e7
+	previous = 41f92e7
+	base = eebecdc
 	trim = 
 	trimbase = 
