--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/snowbot_operating_system
-	previous = 
-	base = aee9d80
+	previous = aee9d80
+	base = 987f9b2
 	trim = 
 	trimbase = 
