Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0-1": ["Tue Nov 23 2021", "David V. Lu!!", "davidvlu@gmail.com"]}
+{"0.1.1-1": ["Wed Dec 01 2021", "David V. Lu!!", "davidvlu@gmail.com"], "0.1.0-1": ["Tue Nov 23 2021", "David V. Lu!!", "davidvlu@gmail.com"]}
