--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.0.2)
 project(snowbot_operating_system)
-set_directory_properties(PROPERTIES COMPILE_OPTIONS "-Wall;-Werror")
+set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++11;-Wall;-Werror")
 
-find_package(ament_cmake REQUIRED)
-find_package(ament_cmake_ros REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(pluginlib REQUIRED)
-find_package(rviz_common REQUIRED)
-find_package(rviz_rendering REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+    geometry_msgs
+    pluginlib
+    rviz
+)
 
 set(CMAKE_AUTOMOC ON)
 
@@ -19,6 +18,17 @@ set(QT_LIBRARIES Qt5::Widgets)
 
 add_definitions(-DQT_NO_KEYWORDS)
 
+catkin_package(
+    CATKIN_DEPENDS
+        geometry_msgs
+        pluginlib
+        rviz
+    LIBRARIES snow_display
+    INCLUDE_DIRS include
+)
+
+include_directories(include ${catkin_INCLUDE_DIRS})
+
 qt5_wrap_cpp(MOC_FILES
   include/snowbot_operating_system/snow_display.h
 )
@@ -27,38 +37,26 @@ add_library(snow_display
     src/snow_display.cpp
     ${MOC_FILES}
 )
-target_include_directories(snow_display PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-ament_target_dependencies(snow_display geometry_msgs pluginlib rviz_common rviz_rendering)
+add_dependencies(snow_display ${catkin_EXPORTED_TARGETS})
+target_link_libraries(snow_display ${QT_LIBRARIES} ${catkin_LIBRARIES})
 
-if(BUILD_TESTING)
-  find_package(ament_cmake_clang_format REQUIRED)
-  ament_clang_format(CONFIG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/.clang-format")
+if(CATKIN_ENABLE_TESTING)
+  find_package(catkin REQUIRED COMPONENTS roslint)
+  roslint_cpp()
+  roslint_add_test()
 endif()
 
 install(TARGETS snow_display
-        EXPORT export_snow_display
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION bin
+        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
 )
 install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION include/${PROJECT_NAME}
+        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
 install(FILES rviz_plugins.xml
-        DESTINATION share/${PROJECT_NAME}
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 install(FILES icons/classes/Snow.png
-        DESTINATION share/${PROJECT_NAME}/icons/classes
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/icons/classes
 )
-install(DIRECTORY include/
-        DESTINATION include
-)
-ament_export_include_directories(include)
-ament_export_libraries(snow_display)
-ament_export_dependencies(geometry_msgs pluginlib rviz_common)
-ament_export_targets(export_snow_display)
-pluginlib_export_plugin_description_file(rviz_common rviz_plugins.xml)
-ament_package()
