--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/snowbot_operating_system
-	previous = 
-	base = f87e280
+	previous = f87e280
+	base = d678336
 	trim = 
 	trimbase = 
