--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/snowbot_operating_system
-	previous = 
-	base = 30b041f
+	previous = 30b041f
+	base = b3920e0
 	trim = 
 	trimbase = 
