--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/snowbot_operating_system
-	previous = 
-	base = e9db7a9
+	previous = e9db7a9
+	base = 05fb8b0
 	trim = 
 	trimbase = 
