--- a/tracks.yaml
+++ b/tracks.yaml
@@ -96,9 +96,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: main
+    last_release: ros1_0.0.4
+    last_version: 0.0.4
     name: upstream
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: ros1_:{version}
     ros_distro: noetic
