--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = 10608fe
+	previous = 10608fe
+	base = aff318f
 	trim = 
 	trimbase = 
