--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/snowbot_operating_system
-	previous = 
-	base = 375c6bc
+	previous = 375c6bc
+	base = 8c71f35
 	trim = 
 	trimbase = 
