--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = d18dfc3
+	previous = d18dfc3
+	base = 23fd040
 	trim = 
 	trimbase = 
