--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = 784c464
+	previous = 784c464
+	base = 81385c4
 	trim = 
 	trimbase = 
