--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/snowbot_operating_system
-	previous = 
-	base = 939735a
+	previous = 939735a
+	base = a6d5fac
 	trim = 
 	trimbase = 
