--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.2-2": ["Tue Feb 08 2022", "David V. Lu!!", "davidvlu@gmail.com"]}
+{"0.1.2-3": ["Tue Apr 19 2022", "David V. Lu!!", "davidvlu@gmail.com"], "0.1.2-2": ["Tue Feb 08 2022", "David V. Lu!!", "davidvlu@gmail.com"]}
