--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = 6c24b27
+	previous = 6c24b27
+	base = 88dbbb5
 	trim = 
 	trimbase = 
