--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = 3439eab
+	previous = 3439eab
+	base = 097b7f1
 	trim = 
 	trimbase = 
