--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/snowbot_operating_system
-	previous = 
-	base = 798d8b3
+	previous = 798d8b3
+	base = efdd322
 	trim = 
 	trimbase = 
