--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/snowbot_operating_system
-	previous = 
-	base = cdb3fad
+	previous = cdb3fad
+	base = 2c303ef
 	trim = 
 	trimbase = 
