--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.2-3": ["Wed Mar 22 2023", "David V. Lu!!", "davidvlu@gmail.com"]}
+{"0.1.2-4": ["Thu Apr 20 2023", "David V. Lu!!", "davidvlu@gmail.com"], "0.1.2-3": ["Wed Mar 22 2023", "David V. Lu!!", "davidvlu@gmail.com"]}
