--- a/tracks.yaml
+++ b/tracks.yaml
@@ -106,8 +106,7 @@ tracks:
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/PickNikRobotics/snowbot_operating_system.git
-    version: 0.1.2
-    version_saved: :{auto}
+    version: :{auto}
   melodic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
