--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/snowbot_operating_system
-	previous = 
-	base = cc969e3
+	previous = cc969e3
+	base = d7b7235
 	trim = 
 	trimbase = 
