--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = 3ace90e
+	previous = 3ace90e
+	base = 5ed2326
 	trim = 
 	trimbase = 
