--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/snowbot_operating_system
-	previous = 
-	base = d80ae6c
+	previous = d80ae6c
+	base = e6a9a14
 	trim = 
 	trimbase = 
