--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/snowbot_operating_system
-	previous = 
-	base = 34a5cf8
+	previous = 34a5cf8
+	base = ab3bee8
 	trim = 
 	trimbase = 
