--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.2-4": ["Wed Mar 06 2024", "David V. Lu!!", "davidvlu@gmail.com"]}
+{"0.1.2-5": ["Wed Apr 23 2025", "David V. Lu!!", "davidvlu@gmail.com"], "0.1.2-4": ["Wed Mar 06 2024", "David V. Lu!!", "davidvlu@gmail.com"]}
